# ChainNano

./: CMakeLists.txt  CMakePresets.json  setup_build.sh
Nano/: ChainReaction.cpp  ChainReaction.h  Gumbel_MCTS.cpp  Gumbel_MCTS.hpp  InferenceQueue.cpp  InferenceQueue.h  MCTS.cpp  MCTS.hpp  Nano.vcxproj  Nano.vcxproj.filters  chain_reaction_bf16.pt  cr_tensor.hpp  full_pipeline.ps1  main.cpp  model.py  pipeline.py  play.cpp  play_bot.py  rl_training_log.txt  train.py  verify_data.py
